Ensure attachment delete button is visible

--- a/src/components/Pages/Program/Item/ViewItem.scss
+++ b/src/components/Pages/Program/Item/ViewItem.scss
@@ -25,6 +25,7 @@
                     position: absolute;
                     top     : 0;
                     right   : 0;
+                    z-index : 100;
                 }
             }
         }
